--- a/Dusza-Fogadas/EndGame.xaml
+++ b/Dusza-Fogadas/EndGame.xaml
@@ -22,14 +22,14 @@
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
 
-        <Label VerticalAlignment="Center" FontSize="30" Grid.ColumnSpan="2">End Game</Label>
+        <Label VerticalAlignment="Center" Margin="15 0 0 0" FontSize="30" Grid.ColumnSpan="2">End Game</Label>
         <Label x:Name="lblUsername" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20">NevNevNev</Label>
         <Label x:Name="lblPoints" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20">50</Label>
         <Button x:Name="btnBackToMenu" Click="btnBackToMenu_Click" Grid.Column="4" Width="60" Height="60" FontSize="15">Menu</Button>
         <Border BorderThickness="0 0 0 1" BorderBrush="Black" Grid.ColumnSpan="5"></Border>
 
 
-        <Label Grid.Row="1" FontSize="25" VerticalAlignment="Center">Game Name</Label>
+        <Label Grid.Row="1" Margin="15 0 0 0" FontSize="25" VerticalAlignment="Center">Game Name</Label>
         <ComboBox x:Name="cbGames" FontSize="25" VerticalContentAlignment="Center" Grid.Row="1" Grid.Column="1" Height="50" Margin="10 0 10 0"></ComboBox>
 
         <ListBox x:Name="lbSubjectsAndEvents" Grid.Row="2" Grid.ColumnSpan="5" Margin="15 0 15 0">
