--- a/Dusza-Fogadas/Menu.xaml
+++ b/Dusza-Fogadas/Menu.xaml
@@ -8,28 +8,25 @@
         Title="Menu" Height="600" Width="410">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition Height="0.6*"></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
 
         <Label BorderThickness="0 0 0 3" Padding="15 0 0 7" BorderBrush="Black" FontSize="30" VerticalAlignment="Center">Main Menu</Label>
 
-        <Button x:Name="btnNewGame" Click="btnNewGame_Click" BorderThickness="0.5 0.5 2 3" Background="white" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Margin="15 0 0 0" FontSize="25" Width="300" Height="50" Grid.Row="1" Padding="5 0 0 0">Create new Game</Button>
+        <DockPanel Grid.Row="1" VerticalAlignment="Stretch" LastChildFill="False">
+            <Button x:Name="btnNewGame" Click="btnNewGame_Click" BorderThickness="0.5 0.5 2 3" Background="white" HorizontalContentAlignment="Stretch" HorizontalAlignment="Stretch" FontSize="25" Height="50" Padding="20 0 0 0" DockPanel.Dock="Top">Create new Game</Button>
 
-        <Button x:Name="btnBet" Click="btnBet_Click" BorderThickness="0.5 0.5 2 3" Background="white" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Margin="15 0 0 0" FontSize="25" Width="300" Height="50" Grid.Row="2" Padding="5 0 0 0">Make a bet</Button>
+            <Button x:Name="btnBet" Click="btnBet_Click" BorderThickness="0.5 0.5 2 3" Background="white" HorizontalContentAlignment="Left" HorizontalAlignment="Stretch" FontSize="25" Height="50" Padding="20 0 0 0" DockPanel.Dock="Top">Make a bet</Button>
 
-        <Button x:Name="btnEndGame" Click="btnEndGame_Click" BorderThickness="0.5 0.5 2 3" Background="white" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Margin="15 0 0 0" FontSize="25" Width="300" Height="50" Grid.Row="3" Padding="5 0 0 0">End a Game</Button>
+            <Button x:Name="btnEndGame" Click="btnEndGame_Click" BorderThickness="0.5 0.5 2 3" Background="white" HorizontalContentAlignment="Left" HorizontalAlignment="Stretch" FontSize="25" Height="50" Padding="20 0 0 0" DockPanel.Dock="Top">End a Game</Button>
 
-        <Button BorderThickness="0.5 0.5 2 3" Background="white" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Margin="15 0 0 0" FontSize="25" Width="300" Height="50" Grid.Row="4" Padding="5 0 0 0">Lekérdezések (még nem)</Button>
+            <Button BorderThickness="0.5 0.5 2 3" Background="white" HorizontalContentAlignment="Left" HorizontalAlignment="Stretch" FontSize="25" Height="50" Padding="20 0 0 0" DockPanel.Dock="Top">Lekérdezések (még nem)</Button>
 
-        <Button x:Name="btnLogOut" Click="btnLogOut_Click" BorderThickness="0.5 0.5 2 3" Background="white" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Margin="15 0 0 0" FontSize="25" Width="300" Height="50" Grid.Row="6" Padding="5 0 0 0">Log out</Button>
+            <Button x:Name="btnExit" Click="btnExit_Click" BorderThickness="0.5 0.5 2 3" Background="white" HorizontalContentAlignment="Left" HorizontalAlignment="Stretch" FontSize="25"  Height="50" Padding="20 0 0 0" DockPanel.Dock="Bottom">Exit</Button>
 
-        <Button x:Name="btnExit" Click="btnExit_Click" BorderThickness="0.5 0.5 2 3" Background="white" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Margin="15 0 0 0" FontSize="25" Width="300" Height="50" Grid.Row="7" Padding="5 0 0 0">Exit</Button>
+            <Button x:Name="btnLogOut" Click="btnLogOut_Click" BorderThickness="0.5 0.5 2 3" Background="white" HorizontalContentAlignment="Left" HorizontalAlignment="Stretch"  FontSize="25" Height="50" Padding="20 0 0 0" DockPanel.Dock="Bottom">Log out</Button>
+        </DockPanel>
+        
     </Grid>
 </Window>
