--- a/Dusza-Fogadas/BetWindow.xaml
+++ b/Dusza-Fogadas/BetWindow.xaml
@@ -35,7 +35,7 @@
         <Border BorderThickness="0 0 0 1" BorderBrush="Black" Grid.ColumnSpan="6"></Border>
 
         <Label FontSize="25" VerticalAlignment="Center" Grid.Row="2" Grid.Column="2">Game Name</Label>
-        <ComboBox x:Name="cbGame" SelectionChanged="cbGameN_SelectionChanged" FontSize="25" Grid.Column="3" Grid.ColumnSpan="2" Height="50" Margin="10 0 10 0" Grid.Row="2"></ComboBox>
+        <ComboBox x:Name="cbGame" SelectionChanged="cbGame_SelectionChanged" FontSize="25" Grid.Column="3" Grid.ColumnSpan="2" Height="50" Margin="10 0 10 0" Grid.Row="2"></ComboBox>
 
         <Label FontSize="25" VerticalAlignment="Center" Grid.Row="3" Grid.Column="2">Subject</Label>
         <ComboBox x:Name="cbSubject" IsEnabled="False" SelectionChanged="CheckIfCanBetCB" FontSize="25" Grid.Column="3" Grid.ColumnSpan="2" Height="50" Margin="10 0 10 0" Grid.Row="3"></ComboBox>
