--- a/Dusza-Fogadas/EndGame.xaml
+++ b/Dusza-Fogadas/EndGame.xaml
@@ -32,9 +32,9 @@
         <Label Grid.Row="1" Margin="15 0 0 0" FontSize="25" VerticalAlignment="Center">Game Name</Label>
         <ComboBox x:Name="cbGames" FontSize="25" VerticalContentAlignment="Center" Grid.Row="1" Grid.Column="1" Height="50" Margin="10 0 10 0"></ComboBox>
 
-        <ListBox x:Name="lbSubjectsAndEvents" Grid.Row="2" Grid.ColumnSpan="5" Margin="15 0 15 0">
+        <DataGrid x:Name="dgSubjectsAndEvents" Grid.Row="2" Grid.ColumnSpan="5" Margin="15 0 15 0">
             
-        </ListBox>
+        </DataGrid>
 
         <Button Click="btnEndGame_Click" x:Name="btnEndGame" Padding="35 0 35 0" Height="55" Grid.Row="3" Grid.ColumnSpan="5" HorizontalAlignment="Center" FontSize="20">End Game</Button>
     </Grid>
