--- a/Dusza-Fogadas/EndGame.xaml
+++ b/Dusza-Fogadas/EndGame.xaml
@@ -30,10 +30,24 @@
 
 
         <Label Grid.Row="1" Margin="15 0 0 0" FontSize="25" VerticalAlignment="Center">Game Name</Label>
-        <ComboBox x:Name="cbGames" FontSize="25" VerticalContentAlignment="Center" Grid.Row="1" Grid.Column="1" Height="50" Margin="10 0 10 0"></ComboBox>
+        <ComboBox x:Name="cbGames" FontSize="25" VerticalContentAlignment="Center" Grid.Row="1" Grid.Column="1" Height="50" Margin="10 0 10 0" SelectionChanged="cbGames_SelectionChanged"></ComboBox>
 
-        <DataGrid x:Name="dgSubjectsAndEvents" Grid.Row="2" Grid.ColumnSpan="5" Margin="15 0 15 0">
-            
+        <DataGrid x:Name="dgSubjectsAndEvents"
+                  AutoGenerateColumns="False"
+                  CanUserAddRows="False"
+                  Grid.Row="2"
+                  Grid.ColumnSpan="5"
+                  Margin="15 0 15 0" CellEditEnding="dgSubjectsAndEvents_CellEditEnding">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Event"
+                                    Binding="{Binding EventName}"
+                                    IsReadOnly="True"/>
+                <DataGridTextColumn Header="Subject"
+                                    Binding="{Binding SubjectName}"
+                                    IsReadOnly="True"/>
+                <DataGridTextColumn Header="Outcome"
+                    Binding="{Binding Outcome, UpdateSourceTrigger=PropertyChanged}"/>
+            </DataGrid.Columns>
         </DataGrid>
 
         <Button Click="btnEndGame_Click" x:Name="btnEndGame" Padding="35 0 35 0" Height="55" Grid.Row="3" Grid.ColumnSpan="5" HorizontalAlignment="Center" FontSize="20">End Game</Button>
