--- a/Dusza-Fogadas/BetWindow.xaml
+++ b/Dusza-Fogadas/BetWindow.xaml
@@ -8,12 +8,10 @@
         Title="BetWindow" Height="600" Width="775">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition Width="2*"></ColumnDefinition>
-            <ColumnDefinition Width="2*"></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
@@ -28,28 +26,26 @@
             <RowDefinition Height="1*"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <Label VerticalAlignment="Center" Margin="15 0 0 0" FontSize="30" Grid.ColumnSpan="3">Make a Bet</Label>
-        <Label x:Name="lblUsername" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20">NevNevNev</Label>
-        <Label x:Name="lblPoints" Grid.Column="4" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20">50</Label>
-        <Button x:Name="btnBackToMenu" Click="btnBackToMenu_Click" Grid.Column="5" Width="60" Height="60" FontSize="15">Menu</Button>
-        <Border BorderThickness="0 0 0 1" BorderBrush="Black" Grid.ColumnSpan="6"></Border>
+        <local:Header 
+            Title="Make a Bet"
+            Grid.ColumnSpan="4"/>
 
-        <Label FontSize="25" VerticalAlignment="Center" Grid.Row="2" Grid.Column="2">Game Name</Label>
-        <ComboBox x:Name="cbGame" SelectionChanged="cbGame_SelectionChanged" FontSize="25" Grid.Column="3" Grid.ColumnSpan="2" Height="50" Margin="10 0 10 0" Grid.Row="2"></ComboBox>
+        <Label FontSize="25" VerticalAlignment="Center" Grid.Row="2" Grid.Column="1">Game Name</Label>
+        <ComboBox x:Name="cbGame" SelectionChanged="cbGame_SelectionChanged" FontSize="25" Grid.Column="2" Height="50" Margin="10 0 10 0" Grid.Row="2"></ComboBox>
 
-        <Label FontSize="25" VerticalAlignment="Center" Grid.Row="3" Grid.Column="2">Subject</Label>
-        <ComboBox x:Name="cbSubject" IsEnabled="False" SelectionChanged="CheckIfCanBetCB" FontSize="25" Grid.Column="3" Grid.ColumnSpan="2" Height="50" Margin="10 0 10 0" Grid.Row="3"></ComboBox>
+        <Label FontSize="25" VerticalAlignment="Center" Grid.Row="3" Grid.Column="1">Subject</Label>
+        <ComboBox x:Name="cbSubject" IsEnabled="False" SelectionChanged="CheckIfCanBetCB" FontSize="25" Grid.Column="2"  Height="50" Margin="10 0 10 0" Grid.Row="3"></ComboBox>
 
-        <Label FontSize="25" VerticalAlignment="Center" Grid.Row="4" Grid.Column="2">Event</Label>
-        <ComboBox x:Name="cbEvent" IsEnabled="False" SelectionChanged="CheckIfCanBetCB" FontSize="25" Grid.Column="3" Grid.ColumnSpan="2" Height="50" Margin="10 0 10 0" Grid.Row="4"></ComboBox>
+        <Label FontSize="25" VerticalAlignment="Center" Grid.Row="4" Grid.Column="1">Event</Label>
+        <ComboBox x:Name="cbEvent" IsEnabled="False" SelectionChanged="CheckIfCanBetCB" FontSize="25" Grid.Column="2" Height="50" Margin="10 0 10 0" Grid.Row="4"></ComboBox>
 
-        <Label FontSize="25" VerticalAlignment="Center" Grid.Row="5" Grid.Column="2">Outcome</Label>
-        <TextBox x:Name="txtOutcome" IsEnabled="False" TextChanged="CheckIfCanBetTXT" FontSize="25" Grid.Column="3" Grid.ColumnSpan="2" Height="50" Margin="10 0 10 0" Grid.Row="5"></TextBox>
+        <Label FontSize="25" VerticalAlignment="Center" Grid.Row="5" Grid.Column="1">Outcome</Label>
+        <TextBox x:Name="txtOutcome" IsEnabled="False" TextChanged="CheckIfCanBetTXT" FontSize="25" Grid.Column="2" Height="50" Margin="10 0 10 0" Grid.Row="5"></TextBox>
 
-        <Label FontSize="25" VerticalAlignment="Center" Grid.Row="6" Grid.Column="2">Points</Label>
-        <TextBox x:Name="txtBetAmount" IsEnabled="False" TextChanged="CheckIfCanBetTXT" FontSize="25" Grid.Column="3" Grid.ColumnSpan="2" Height="50" Margin="10 0 10 0" Grid.Row="6"></TextBox>
+        <Label FontSize="25" VerticalAlignment="Center" Grid.Row="6" Grid.Column="1">Points</Label>
+        <TextBox x:Name="txtBetAmount" IsEnabled="False" TextChanged="CheckIfCanBetTXT" FontSize="25" Grid.Column="2" Height="50" Margin="10 0 10 0" Grid.Row="6"></TextBox>
 
-        <Button x:Name="btnBet" Click="btnBet_Click" IsEnabled="False" Grid.Row="8" Grid.Column="2" Grid.ColumnSpan="2" Width="200" Height="50" FontSize="25">Bet</Button>
+        <Button x:Name="btnBet" Click="btnBet_Click" IsEnabled="False" Grid.Row="8" Grid.Column="1" Grid.ColumnSpan="2" Width="200" Height="50" FontSize="25">Bet</Button>
 
     </Grid>
 </Window>
