--- a/Dusza-Fogadas/EndGame.xaml
+++ b/Dusza-Fogadas/EndGame.xaml
@@ -14,29 +14,18 @@
             <RowDefinition Height="0.9*"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="2*"></ColumnDefinition>
-            <ColumnDefinition Width="3*"></ColumnDefinition>
-            <ColumnDefinition Width="2*"></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-        </Grid.ColumnDefinitions>
+        <local:Header Title="End game"/>
 
-        <Label VerticalAlignment="Center" Margin="15 0 0 0" FontSize="30" Grid.ColumnSpan="2">End Game</Label>
-        <Label x:Name="lblUsername" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20">NevNevNev</Label>
-        <Label x:Name="lblPoints" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20">50</Label>
-        <Button x:Name="btnBackToMenu" Click="btnBackToMenu_Click" Grid.Column="4" Width="60" Height="60" FontSize="15">Menu</Button>
-        <Border BorderThickness="0 0 0 1" BorderBrush="Black" Grid.ColumnSpan="5"></Border>
-
-
-        <Label Grid.Row="1" Margin="15 0 0 0" FontSize="25" VerticalAlignment="Center">Game Name</Label>
-        <ComboBox x:Name="cbGames" FontSize="25" VerticalContentAlignment="Center" Grid.Row="1" Grid.Column="1" Height="50" Margin="10 0 10 0" SelectionChanged="cbGames_SelectionChanged"></ComboBox>
-
+        <StackPanel Orientation="Horizontal"
+            Grid.Row="1">
+            <Label  Margin="15 0 0 0" FontSize="25" VerticalAlignment="Center">Game Name</Label>
+            <ComboBox x:Name="cbGames" FontSize="25" VerticalContentAlignment="Center" Height="50" Margin="10 0 10 0" MinWidth="200" SelectionChanged="cbGames_SelectionChanged"></ComboBox>
+        </StackPanel>
+        
         <DataGrid x:Name="dgSubjectsAndEvents"
                   AutoGenerateColumns="False"
                   CanUserAddRows="False"
                   Grid.Row="2"
-                  Grid.ColumnSpan="5"
                   Margin="15 0 15 0" CellEditEnding="dgSubjectsAndEvents_CellEditEnding">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Event"
@@ -50,6 +39,6 @@
             </DataGrid.Columns>
         </DataGrid>
 
-        <Button Click="btnEndGame_Click" x:Name="btnEndGame" Padding="35 0 35 0" Height="55" Grid.Row="3" Grid.ColumnSpan="5" HorizontalAlignment="Center" FontSize="20">End Game</Button>
+        <Button Click="btnEndGame_Click" x:Name="btnEndGame" Padding="35 0 35 0" Height="55" Grid.Row="3" HorizontalAlignment="Center" FontSize="20">End Game</Button>
     </Grid>
 </Window>
